<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textHello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/welcome_to_moda_store"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardLogo"
        app:layout_constraintStart_toEndOf="@+id/cardLogo"
        app:layout_constraintEnd_toStartOf="@+id/button"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/search"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textHello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textHello" />

    <TextView
        android:id="@+id/textWomenCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/mujer"
        android:textColor="#212121"
        android:textSize="32sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cardLogo"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/locationsViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:paddingStart="56dp"
        android:paddingEnd="56dp"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintTop_toBottomOf="@id/textWomenCategory"/>

    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:iconSize="24dp"
        app:iconTint="#989898"
        app:iconTintActive="#212121"
        app:indicatorColor="#ECECEC"
        app:indicatorRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu"
        app:textColor="#212121"
        app:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>