<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp"
        android:elevation="8dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/home_img_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="#212121"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/home_img_logo"
            app:layout_constraintStart_toEndOf="@+id/home_img_logo"
            app:layout_constraintTop_toTopOf="@+id/home_img_logo" />

        <EditText
            android:id="@+id/home_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:hint="@string/search"
            android:autofillHints="Blusa.. pantalon"
            android:padding="8dp"
            android:background="@drawable/button_rounded"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/home_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/home_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_search_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textWomenCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/nunitobold"
                android:letterSpacing="0.1"
                android:text="@string/mujer"
                android:textAlignment="center"
                android:textColor="#212121"
                android:textSize="32sp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/WomenSlider"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="56dp"
                android:paddingEnd="56dp"
                app:layout_constraintBottom_toTopOf="@id/textMenCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textWomenCategory" />

            <TextView
                android:id="@+id/textMenCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/nunitobold"
                android:letterSpacing="0.1"
                android:text="@string/hombre"
                android:textAlignment="center"
                android:textColor="#212121"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@id/WomenSlider" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/MenSlider"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="56dp"
                android:paddingEnd="56dp"
                app:layout_constraintBottom_toTopOf="@id/textKidCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textMenCategory" />


            <TextView
                android:id="@+id/textKidCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/nunitobold"
                android:letterSpacing="0.1"
                android:text="@string/ninos"
                android:textAlignment="center"
                android:textColor="#212121"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@id/MenSlider" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/KidSlider"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="56dp"
                android:paddingEnd="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textKidCategory" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/home_menu"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>